Fixes start and end of landing page on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,6 +22,7 @@
 	justify-content: center;
 	align-items: center;
 	min-height: 100vh;
+	margin-block: 1em;
 }
 
 /* Defines the size of the logo */
@@ -183,6 +184,11 @@
 @media (min-width: 559px) {
 	.filter-container {
 		flex-direction: row;
+	}
+
+	/* a little hacky to remove forced margin for mobile devices once a certain size is passed */
+	.landing-page-container {
+		margin-block: 0em;
 	}
 }
 
